--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,12 +9,17 @@
     "build": "tsc -p tsconfig.json",
     "test": "vitest run --coverage",
     "dev": "vitest",
-    "lint": "echo 'lint placeholder'"
+    "lint": "eslint \"src/**/*.ts\""
   },
   "license": "MIT",
   "packageManager": "pnpm@10.15.1",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
