chore: install core deps in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-      - run: pnpm install
+      - run: pnpm -C packages/core install
       - run: pnpm -C packages/core lint
       - run: pnpm -C packages/core test
