feat: add SQLite, SSE, and WAL-ndjson adapters for event handling and persistence feat: implement HTTP server with endpoints for event streaming and health checks feat: introduce metrics tracking for event processing and adapter performance feat: create a RootHost to manage event emission and adapter interactions feat: add tests for SQLite ordering and SSE keep-alive functionality chore: configure ESLint rules to enforce import restrictions and code quality chore: set up CI workflow to validate code quality and prevent deep imports docs: add README files for server and host to provide usage instructions and API details

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,9 @@ jobs:
       - run: pnpm -C packages/core install
       - run: pnpm -C packages/core lint
       - run: pnpm -C packages/core test
+      - name: Guard against deep core imports
+        run: |
+          if rg -n "\.\./packages/core/src/" -S | grep -v "^packages/core/"; then
+            echo "Deep imports into core src are forbidden. Use @minamorl/root-core barrel." >&2
+            exit 1
+          fi
