--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p tsconfig.json",
     "test": "vitest run --coverage",
     "dev": "vitest",
-    "lint": "eslint \"src/**/*.ts\""
+    "lint": "node ./scripts/run-eslint.cjs \"src/**/*.ts\""
   },
   "license": "MIT",
   "packageManager": "pnpm@10.15.1",
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^8.7.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.9.2",
