--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "root-paradigm",
   "version": "0.0.0",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm -C packages/core build",
     "test": "pnpm -C packages/core test",
     "lint": "pnpm -C packages/core lint",
     "dev": "pnpm -C packages/core dev"
   },
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.15.1",
+  "dependencies": {
+    "better-sqlite3": "^12.2.0",
+    "tsx": "^4.20.5"
+  }
 }
