--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.15.1",
   "dependencies": {
     "better-sqlite3": "^12.2.0",
+    "node-sql-parser": "^5.3.12",
     "tsx": "^4.20.5"
   }
 }
